--- a/app/src/main/res/layout/fragment_chat_detail_view.xml
+++ b/app/src/main/res/layout/fragment_chat_detail_view.xml
@@ -3,100 +3,123 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/fragment_chat_detail_view">
+        android:id="@+id/fragment_chat_detail_view"
+        android:layout_margin="40dp">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/chat_detail_title"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/chat_detail_title"
-            style="@style/TextAppearance.Material3.TitleMedium"/>
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/chat_detail_selfie"
-            android:layout_width="300px"
-            android:layout_height="300px"
-            android:layout_gravity="center"
-            android:src="@drawable/defaultselfie"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/chat_detail_title"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/chat_detail_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <TextView
+                        android:id="@+id/chat_detail_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textSize="24sp"
+                        android:textColor="#000000"
+                        android:text="@string/chat_detail_title"
+                        />
+
+                    <ImageView
+                        android:id="@+id/chat_detail_selfie"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/defaultselfie"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintTop_toBottomOf="@id/chat_detail_title"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintTop_toBottomOf="@id/chat_detail_content">
+
+                        <TextView
+                            android:id="@+id/chat_detail_date"
+                            style="@style/TextAppearance.Material3.BodySmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Date" />
+
+                        <TextView
+                            android:id="@+id/chat_detail_time"
+                            style="@style/TextAppearance.Material3.BodySmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="10dp"
+                            android:text="Time" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/chat_detail_recipient"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        app:layout_constraintTop_toBottomOf="@id/chat_detail_selfie"
+                        style="@style/TextAppearance.Material3.BodySmall"/>
+
+                    <TextView
+                        android:id="@+id/chat_detail_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:gravity="center"
+                        app:layout_constraintTop_toBottomOf="@id/chat_detail_recipient"
+                        style="@style/TextAppearance.Material3.BodyMedium"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="100dp">
+                        <ImageButton
+                            android:id="@+id/chat_detail_safeToText_image"
+                            android:layout_width="80px"
+                            android:layout_height="80px"
+                            android:layout_marginEnd="7dp"
+                            android:background="@drawable/rounded_shape"
+                            android:src="@drawable/ic_safe_to_text" />
+                        <TextView
+                            android:id="@+id/chat_detail_safeToText_caption"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Safe To Text"
+                            style="@style/TextAppearance.Material3.BodySmall"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+        <Button
+            android:id="@+id/goToChatView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/chat_detail_selfie"
-            style="@style/TextAppearance.Material3.BodyMedium"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/chat_detail_content">
-
-            <TextView
-                android:id="@+id/chat_detail_date"
-                style="@style/TextAppearance.Material3.BodySmall"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Date" />
-
-            <TextView
-                android:id="@+id/chat_detail_time"
-                style="@style/TextAppearance.Material3.BodySmall"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:text="Time" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/chat_detail_safeToText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:text="Safe To Text"
-            style="@style/TextAppearance.Material3.BodyLarge"/>
-
-    </LinearLayout>
-
-
+            android:layout_height="80dp"
+            android:layout_marginHorizontal="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="goToChatView"
+            android:text="Back"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-    <Button
-        android:id="@+id/goToChatView"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_margin="80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:onClick="goToChatView"
-        android:text="Back"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
