--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -15,23 +15,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="80dp">
+                android:layout_margin="40dp">
+
 
                 <TextView
                     android:id="@+id/chats_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginTop="32dp"
-                    android:gravity="left"
                     android:text="@string/previous_chats"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                    android:textSize="24sp"
+                    android:textColor="#000000"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:layout_editor_absoluteX="32dp" />
+
+                <TextView
+                    android:id="@+id/chats_empty"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:gravity="left"
+                    android:text="@string/no_chats"
+                    android:textSize="18sp"
+                    app:layout_constraintTop_toBottomOf="@id/chats_title" />
 
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -39,7 +46,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="8dp"
-                    android:layout_marginHorizontal="16dp"
                     app:layout_constraintTop_toBottomOf="@id/chats_title"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     />
