--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,4 +10,9 @@
         android:enabled="true"
         android:title="Chats"
         android:icon="@drawable/ic_chats"/>
+    <item
+        android:id="@+id/preferences"
+        android:enabled="true"
+        android:title="Preferences"
+        android:icon="@drawable/ic_preferences"/>
 </menu>
