--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,8 @@
     <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="Checkbox" parent="Theme.Drunkometer">
+        <item name="colorAccent">@color/primaryVariant</item>
+    </style>
 </resources>
