--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".preferences.PreferencesFragment"
+    tools:context=".recommender.PreferencesFragment"
     android:id="@+id/fragment_preferences">
 
     <androidx.constraintlayout.widget.ConstraintLayout
