--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -12,15 +12,14 @@
         android:layout_height="match_parent"
         android:layout_margin="40dp">
 
-
         <ScrollView
+            android:id="@+id/preferences_scrolling"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/preferences_lists"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="85dp">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/preferences_title"
@@ -137,8 +136,7 @@
                     android:layout_marginTop="8dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constrainedHeight="false"
-                    app:layout_constraintTop_toBottomOf="@id/preferences_hot"
-                    tools:layout_editor_absoluteX="16dp" />
+                    app:layout_constraintTop_toBottomOf="@id/preferences_hot" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
