--- a/app/src/main/res/layout/fragment_text_message_intro.xml
+++ b/app/src/main/res/layout/fragment_text_message_intro.xml
@@ -60,4 +60,44 @@
 
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/skip_waiting_layout"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/skip_waiting_calculatingDrunkennessScore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/calculating_drunkenness_score"
+            android:textColor="#000000"
+            android:textSize="24sp"/>
+
+        <ProgressBar
+            android:id="@+id/skip_waiting_progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/skip_waiting_pleaseWait"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/skip_waiting_progressBar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="5dp"
+            android:text="@string/please_wait"
+            android:textColor="#808080"
+            android:textSize="12sp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
