--- a/app/src/main/res/layout/fragment_age.xml
+++ b/app/src/main/res/layout/fragment_age.xml
@@ -8,7 +8,7 @@
     android:layout_margin="40dp">
 
     <TextView
-        android:id="@+id/usernameTitle"
+        android:id="@+id/ageTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/usernameTitle"
@@ -17,31 +17,36 @@
         android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/usernameDescription"
+        android:id="@+id/ageDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/usernameTitle"
-        android:text="@string/usernameDescription"
+        app:layout_constraintTop_toBottomOf="@id/ageTitle"
+        android:text="@string/ageInfo"
         android:textColor="#000000" />
 
     <EditText
-        android:id="@+id/usernameInput"
+        android:id="@+id/ageInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="100dp"
         android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="name"
-        android:inputType="textPersonName"
-        app:layout_constraintTop_toBottomOf="@id/usernameDescription" />
+        app:layout_constraintTop_toBottomOf="@id/ageDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        android:hint="Year"
+        android:maxLength="4"
+        android:maxLines="1"
+        android:gravity="center"
+        android:digits="0123456789"
+        android:inputType="numberDecimal" />
 
     <Button
-        android:id="@+id/saveUsername"
+        android:id="@+id/checkAge"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:onClick="saveUsername"
-        android:text="Continue to drunk-o-meter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0
-" />
+        android:onClick="checkAge"
+        android:text="Continue"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
