--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -27,4 +27,8 @@
         <item name="colorAccent">@color/secondary</item>
         <item name="android:progressBarStyle">@style/Widget.AppCompat.ProgressBar.Horizontal</item>
     </style>
+
+    <style name="ModeButton" parent="Theme.Drunkometer">
+        <item name="colorPrimary">@color/primaryVariant</item>
+    </style>
 </resources>
