--- a/app/src/main/res/layout/fragment_age.xml
+++ b/app/src/main/res/layout/fragment_age.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".OnboardingActivity"
-    android:layout_margin="40dp">
+    android:layout_margin="40dp"
+    android:id="@+id/ageScreen">
 
     <TextView
         android:id="@+id/ageTitle"
@@ -38,7 +39,9 @@
         android:maxLines="1"
         android:gravity="center"
         android:digits="0123456789"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal"
+        android:imeOptions="actionDone"
+        />
 
     <Button
         android:id="@+id/checkAge"
