--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,5 +30,6 @@
 
     <style name="ModeButton" parent="Theme.Drunkometer">
         <item name="colorPrimary">@color/primaryVariant</item>
+        <item name="android:textColor">@color/primaryVariant</item>
     </style>
 </resources>
