--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -77,11 +77,29 @@
                     app:layout_constraintTop_toBottomOf="@id/preferences_beer" />
 
                 <TextView
-                    android:id="@+id/preferences_cocktails"
+                    android:id="@+id/preferences_aperitif"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     app:layout_constraintTop_toBottomOf="@id/preferences_beer_list"
+                    android:text="@string/aperitif"
+                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/preferences_aperitif_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintTop_toBottomOf="@id/preferences_aperitif" />
+
+                <TextView
+                    android:id="@+id/preferences_cocktails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintTop_toBottomOf="@id/preferences_aperitif_list"
                     android:text="@string/cocktails"
                     android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />
 
