--- a/app/src/main/res/layout/fragment_drunkometer_start.xml
+++ b/app/src/main/res/layout/fragment_drunkometer_start.xml
@@ -18,19 +18,21 @@
         android:id="@+id/selfieView"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/DrunkometerStartTitle"
         tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/startDrunkometerAnalysis"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="24dp"
         android:onClick="startDrunkometerAnalysis"
         android:text="How drunk am I?"
-        app:layout_constraintBottom_toTopOf="@+id/clearLocalStorageBtn" />
+        app:layout_constraintBottom_toTopOf="@+id/clearLocalStorageBtn"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/startNewDayBtn"
@@ -47,6 +49,6 @@
         android:onClick="clearLocalStorage"
         android:text="Clear local storage (debugging)"
         app:layout_constraintBottom_toTopOf="@id/startNewDayBtn"
-        tools:layout_editor_absoluteX="0" />
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
